# mRKC

./: .gitignore  .gitmodules  ARGS_LIST.md  CMakeLists copia.txt  CMakeLists.txt  Dockerfile  README.md
include/: ChebyshevMethods.h  ClassicalOdeRungeKuttaIntegrators.h  ErrorController.h  LegendreMethods.h  MainHeader.h  MultirateOdeProblems.h  MultirateOdeRungeKuttaIntegrator.h  ODECellByCellModel.h  Ode.h  OdeProblems.h  OdeRungeKuttaIntegrator.h  Parameters.h  StabilizedOdeRungeKuttaIntegrators.h  TimeIntegrator.h
include/getpot/: GetPot.cpp
include/ionic_models/: IonicModel.h
include/lean_vtk/: lean_vtk.h
include/uBidomain/: Boundary.h  CellyByCellModel.h  Domain.h  FSeries.h  MultiDomain.h  MyoKitIonicModel.h  Side.h  Utils.h  exact_sol.h  fft.h  getV1.h
install/: MultirateIntegrators
matlab/: Eff_results.m  PlotSimulationsResults.m  Plot_Brusselator.m  Plot_CUSP.m  Plot_DahlquistTestProblem.m  Plot_DiffusionRefinedMesh.m  Plot_ErrContrData.m  Plot_HodgkinHuxley.m  Plot_InfectiousDiseaseTransmission.m  Plot_IntegroDifferential.m  Plot_ManyDiffusionTerms.m  Plot_MonoDomain.m  Plot_NeuronCable.m  Plot_ODEIonicModel.m  Plot_Oregonator.m  Plot_PDEBrusselator.m  Plot_PopulationDynamics.m  Plot_RadiationDiffusion.m  Plot_RobertsonChemicalSystem.m  Plot_ScalarNonStiffNonLinearTest.m  Plot_VanDerPol.m  Plot_mReactionDiffusion2DEquations.m  RunSequenceOfSimulations.m  RunSequenceOfSimulationsBis.m  cell.csv  collect_sim_data.m  cost_IE.m  multirate_data.m  plot_MonoDomain_in_1D.m  screen2eps.m
results/: .gitignore
src/: CMakeLists.txt  ChebyshevMethods.cpp  ClassicalOdeRungeKuttaIntegrators.cpp  ErrorController.cpp  LegendreMethods.cpp  MultirateOdeProblems.cpp  MultirateOdeRungeKuttaIntegrator.cpp  ODECellByCellModel.cpp  Ode.cpp  OdeProblems.cpp  OdeRungeKuttaIntegrator.cpp  Parameters.cpp  StabilizedOdeRungeKuttaIntegrators.cpp  TimeIntegrator.cpp  main.cpp
src/ionic_models/: CMakeLists.txt  IonicModel.cpp  MyoKitIonicModel.cpp
src/ionic_models/myokit/: Fox2002.c  LuoRudy1991.c
src/lean_vtk/: CMakeLists.txt  lean_vtk.cpp
src/uBidomain/: Boundary.cpp  CMakeLists.txt  CellByCellModel.cpp  Domain.cpp  FSeries.cpp  MultiDomain.cpp  MyoKitIonicModel.cpp  Side.cpp  exact_sol.cpp  fft.cpp  getV1.cpp
src/uBidomain/myokit/: Courtemanche1998.c  HodgkinHuxley1952.c  OHaraRudy2011.c
